--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "db:generate": "prisma generate",
     "db:migrate": "prisma migrate dev",
     "db:reset": "prisma migrate reset",
-    "pages:build": "opennext build",
+    "pages:build": "npx @opennextjs/cloudflare build",
     "deploy": "opennext build && wrangler pages deploy .opennext --project-name=ma-launching"
   },
   "dependencies": {
