--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -1,4 +1,6 @@
 {
   "name": "ma-launching",
-  "pages_build_output_dir": ".open-next"
+  "pages_build_output_dir": ".open-next",
+  "compatibility_date": "2024-05-14", 
+  "compatibility_flags": ["nodejs_compat"]
 }
