--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -1,6 +1,6 @@
 {
   "name": "ma-launching",
-  "pages_build_output_dir": ".open-next",
-  "compatibility_date": "2024-05-14", 
+  "pages_build_output_dir": ".next/standalone",
+  "compatibility_date": "2024-10-22",
   "compatibility_flags": ["nodejs_compat"]
 }
